--- a/jukebox.local/resources/views/layouts/html.twig
+++ b/jukebox.local/resources/views/layouts/html.twig
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Laravel</title>
-
+	<title>Jukebox</title>
+	<base href="http://jukebox.local/" target="_blank" />
 	{% include 'layouts/partials/css' %}
-
-
 
 </head>
 <body>
