--- a/jukebox.local/resources/views/listing/partials/artist-item.twig
+++ b/jukebox.local/resources/views/listing/partials/artist-item.twig
@@ -1,1 +1,1 @@
-<a class="list-group-item" href="{{ artist|url_encode }}/songs" >{{ artist }}</a>
+<li class="list-group-item" href="{{ artist|url_encode }}/songs" >{{ artist }}</li>
