--- a/jukebox.local/resources/views/footer/footer.twig
+++ b/jukebox.local/resources/views/footer/footer.twig
@@ -1,1 +1,5 @@
-	<div class="col-xs-12"><div class="trackInfo">Current Song: Robyn - Hang With Me</div></div>
+<div class="col-xs-12">
+	<div class="trackInfo">
+		{% include 'footer/partials/now-playing' with {artist:current_artist, song:current_song} %}
+	</div>
+</div>
