--- a/jukebox.local/resources/views/listing/partials/song-item.twig
+++ b/jukebox.local/resources/views/listing/partials/song-item.twig
@@ -1,1 +1,2 @@
-<a class="list-group-item" href="{{ song.Title|url_encode }}/queue" >{{ song.Title }}</a>
+
+<form><input type="hidden" name="_token" value="{{ csrf_token() }}"> <button class="list-group-item" formaction="/queue" name="song" formmethod="post" value="{{ song.file }}" onclick="submit">{{ song.Title }}</button></form>
