--- a/jukebox.local/resources/views/layouts/html.twig
+++ b/jukebox.local/resources/views/layouts/html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Jukebox</title>
-	<base href="http://jukebox.local/" target="_blank" />
+	<base href="{{ url('base_url') }}" target="_blank" />
 	{% include 'layouts/partials/css' %}
 
 </head>
