Auth, beginning admin

--- a/jukebox.local/resources/views/footer/footer.twig
+++ b/jukebox.local/resources/views/footer/footer.twig
@@ -1,5 +1,5 @@
 <div class="col-xs-12">
 	<div class="trackInfo">
-		{% include 'footer/partials/now-playing' with {artist:current_artist, song:current_song} %}
+		{% include 'footer/partials/now-playing' with {artist:currentArtist, song:currentSong} %}
 	</div>
 </div>
