--- a/jukebox.local/resources/views/footer/partials/now-playing.twig
+++ b/jukebox.local/resources/views/footer/partials/now-playing.twig
@@ -1,1 +1,1 @@
-Now Playing: {{ artist }} - {{ song }}
+Now Playing: <span id="currentArtist">{{ artist }}</span> - <span id="currentSong">{{ song }}</span> <span id="currentTime"></span>
