fix selected assignment

--- a/jukebox.local/resources/views/admin/admin.twig
+++ b/jukebox.local/resources/views/admin/admin.twig
@@ -20,7 +20,7 @@
 					<option value = '' {%  if not playlistValid %}selected{% endif %}>none</option>
 
 					{%  for playlist in allPlaylists %}
-						<option value = '{{ playlist }}' {%  if not playlist == jukeboxPlaylist %}selected{% endif %}>{{ playlist }}</option>
+						<option value = '{{ playlist }}' {%  if playlist == jukeboxPlaylist %}selected{% endif %}>{{ playlist }}</option>
 					{% endfor %}
 				</select>
 			</label>
