--- a/jukebox.local/resources/views/layouts/partials/css.twig
+++ b/jukebox.local/resources/views/layouts/partials/css.twig
@@ -1,8 +1,7 @@
 <link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet" type="text/css">
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-
+<link href="https://fonts.googleapis.com/css?family=Oswald|Roboto+Condensed" rel="stylesheet">
 <style>
 	html, body {
 		height: 100%;
@@ -17,7 +16,7 @@
 		width: 100%;
 		display: table;
 		font-weight: 100;
-		font-family: 'Lato';
+		font-family: 'Roboto Condensed', sans-serif;
 	}
 
 	.container {
@@ -40,7 +39,7 @@
 		z-index: 1;
 	}
 	.title {
-		font-size: 40px;
+		font-size: 3em;
 		font-family: 'Modesty';
 		border-top: 2pt solid #BC9B1B;
 		padding-top: 5px;
