--- a/jukebox.local/resources/views/layouts/html.twig
+++ b/jukebox.local/resources/views/layouts/html.twig
@@ -7,6 +7,7 @@
 	<title>Jukebox</title>
 	<base href="{{ url('base_url') }}" />
 	{% include 'layouts/partials/css' %}
+	{% include 'layouts/partials/js' %}
 
 </head>
 <body>
