begin now-playing info

--- a/jukebox.local/resources/views/header/header.twig
+++ b/jukebox.local/resources/views/header/header.twig
@@ -1,2 +1,8 @@
-<div class="title col-xs-12">#Craig andJess</div>
-<div class="subtitle col-xs-12">{{ pageSubtitle }}</div>
+<div class="title row">
+	<span class="col-xs-1">
+		<a type="button" class="btn btn-default glyphicon glyphicon-home" href="/">
+		</a>
+	</span>
+	<span class="col-xs-10">#Craig andJess</span>
+</div>
+<div class="subtitle row col-xs-12">{{ pageSubtitle }}</div>
