--- a/jukebox.local/resources/views/layouts/html.twig
+++ b/jukebox.local/resources/views/layouts/html.twig
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container-fluid">
-	<div class="header row">
+	<div class="header">
 		{% include 'header/header' %}
 	</div>
 	<div class="content row">
