--- a/jukebox.local/resources/views/layouts/partials/js.twig
+++ b/jukebox.local/resources/views/layouts/partials/js.twig
@@ -1,3 +1,4 @@
 <script src="{{ asset('/js/jquery-3.1.0.min.js') }}"></script>
 <script src="{{ asset('/js/vendor.js') }}"></script>
-<script src="{{ asset('/js/now-playing.js') }}"></script>
+<!-- <script src="{{ asset('/js/now-playing.js') }}"></script> -->
+
