get/set settings, default laravel user scaffolding. Blade auth templates 'cause lazy

--- a/jukebox.local/resources/views/admin/admin.twig
+++ b/jukebox.local/resources/views/admin/admin.twig
@@ -12,15 +12,14 @@
 		<div class="form-group">
 
 			<div class="checkbox">
-
-				<label>
-					Jukebox Mode
+				<label class="control-label ">
 					<input type="checkbox" name="jukeboxMode" {% if jukeboxMode %} checked {% endif %} />
+					Jukebox Mode
 				</label>
 			</div>
 
 			<div class="checkbox">
-				<label>
+				<label class="control-label ">
 					<input type="checkbox" name="allowDuplicates" {% if jukeboxDuplicates %} checked {% endif %}> Allow Duplicates
 				</label>
 			</div>
