thank you message

--- a/jukebox.local/resources/views/footer/footer.twig
+++ b/jukebox.local/resources/views/footer/footer.twig
@@ -1,5 +1,6 @@
 <div class="col-xs-12">
 	<div class="trackInfo">
-		{% include 'footer/partials/now-playing' with {artist:currentArtist, song:currentSong} %}
+		<marquee>Thanks for coming!</marquee>
+		{#{% include 'footer/partials/now-playing' with {artist:currentArtist, song:currentSong} %}#}
 	</div>
 </div>
