won't queue duplicates

--- a/jukebox.local/resources/views/footer/footer.twig
+++ b/jukebox.local/resources/views/footer/footer.twig
@@ -1,6 +1,6 @@
 <div class="col-xs-12">
 	<div class="trackInfo">
-		<marquee>Thanks for coming!</marquee>
+		<span>Thanks for coming!</span>
 		{#{% include 'footer/partials/now-playing' with {artist:currentArtist, song:currentSong} %}#}
 	</div>
 </div>
