use artist_id in path

--- a/jukebox.local/resources/views/listing/partials/artist-item.twig
+++ b/jukebox.local/resources/views/listing/partials/artist-item.twig
@@ -1,1 +1,1 @@
-<a class="list-group-item" href="{{ artist|url_encode }}/songs" >{{ artist }}</a>
+<a class="list-group-item" href="{{ artist.id }}/songs" >{{ artist.name }}</a>
