--- a/jukebox.local/resources/views/layouts/partials/css.twig
+++ b/jukebox.local/resources/views/layouts/partials/css.twig
@@ -1,6 +1,6 @@
 <link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet" type="text/css">
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<link href="bootstrap.min.css" rel="stylesheet" type="text/css">
+<link href="font-awesome.min.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto+Condensed" rel="stylesheet">
 <style>
 	html, body {
